--- a/index.html
+++ b/index.html
@@ -1,24 +1,9 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>M A R A</title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hello World!</h1>
-				<p>ZZZZZZZZZZZZZZZZ <a href="/about">Read more about my life...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-	</body>
-</html>
+---
+layout: default
+title: Hank Quinlan, Horrible Cop
+---
+<div class="blurb">
+	<h1>Hi there!</h1>
+	<p>Don't trust me. <a href="/about">Read more about my life...</a></p>
+</div><!-- /.blurb -->
+
