--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: M A R A |
 ---
 <div class="blurb">
-	<h1>Hi there!</h1>
-	<p>Don't trust me. <a href="/about">Read more about my life...</a></p>
+	<h1>Coming Soon!</h1>
+	<p>Sometime in the future, or maybe never...</a></p>
 </div><!-- /.blurb -->
 
