--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Maravilla.GitHub.io</h1>
-      <h2 class="project-tagline">M A R A |</h2>
+      <h2 class="project-tagline">A CS Students Blog</h2>
     </section>
 
     <section class="main-content">
